2001-12-10  Jakub Jelinek  <jakub@redhat.com>

	* objcopy.c (setup_section): Copy entsize.

2001-12-07  Geoffrey Keating  <geoffk@redhat.com>

	* readelf.c (guess_is_rela): Add support for stormy16.
	(dump_relocations): Likewise.
	(get_machine_name): Likewise.

2001-12-05  Nick Clifton  <nickc@cambridge.redhat.com>

	* dllwrap.c (main) Replace multiple strings describing a
	single error with a single, newline escaped sentence to permit
	better translation into foreign languages.

	* readelf.c (get_elf_class): Remove internalionalisation of ELF
	class names.

2001-12-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* strings.c (get_char): Initialize value.

2001-12-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* arlex.l: Silence compile warnings.
	* arsup.h: Likewise. Fix formatting.

2001-12-04  Jakub Jelinek  <jakub@redhat.com>

	* strings.c: Include config.h before bfd.h.
	(file_off): New type.
	(file_open): Define.
	(print_strings): Use file_off instead of file_ptr.  Print addresses
	which don't fit into long correctly.
	(get_char): Use file_off instead of file_ptr.  Use getc_unlocked if
	available.
	(strings_file): Use file_off instead of file_ptr.  Use file_open.
	* configure.in: Check for getc_unlocked.
	Check for fopen64 and whether _LARGEFILE64_SOURCE needs to
	be defined for it.
	* configure: Rebuilt.
	* config.h.in: Rebuilt.

2001-11-29  H.J. Lu <hjl@gnu.org>

	* bucomm.c (make_tempname): Revert the changes made on
	2001-11-14 and 2001-11-12. They won't work with directories.

2001-11-23  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* binutils/Makefile.am (check-DEJAGNU): Pass CC_FOR_TARGET and
	CFLAGS_FOR_TARGET to runtest in environment.
	* Makefile.in: Rebuild.
	* doc/Makefile.in: Rebuild.

2001-11-28  Mike Stump  <mrs@wrs.com>

	* objcopy.c (setup_section): Preserve SEC_RELOC when
	--set-section-flags is used.

2001-11-19  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (do_debug_str): New variable.